<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".PlayActivity">

    <FrameLayout
        android:id="@+id/flTextViewTimer"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/flTextViewNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/white_filled_circular_button">

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/timer_text"
            android:textColor="@color/text_teal"
            android:textStyle="bold"
            android:textSize="25sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flTextViewNumber"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/flTextViewTimer"
        app:layout_constraintBottom_toTopOf="@id/flTapButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/white_filled_circular_button">

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/a_thousand"
            android:textColor="@color/text_teal"
            android:textStyle="bold"
            android:textSize="36sp"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flTapButton"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/flTextViewNumber"
        app:layout_constraintBottom_toBottomOf="@id/btnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/white_filled_circular_button">

        <TextView
            android:id="@+id/tvTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text"
            android:textColor="@color/text_teal"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            app:rippleColor="#D1D1D1" />

    </FrameLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/button_start"
        android:textColor="@color/text_teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flTapButton"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        android:backgroundTint="@color/white"/>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reset"
        android:textColor="@color/text_teal"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>